登录页前端

--- a/core/locale/zh_CN.json
+++ b/core/locale/zh_CN.json
@@ -17,6 +17,9 @@
     "signup": {
       "passwd2": "重复",
       "alreadySignup": "已有帐号？"
+    },
+    "login": {
+      "noAccount": "还没有账户？"
     }
   }
 }
