管理面板页面

--- a/core/locale/zh_CN.json
+++ b/core/locale/zh_CN.json
@@ -11,7 +11,8 @@
     "email": "邮箱",
     "passwd": "密码",
     "error": "错误",
-    "logout": "注销"
+    "logout": "注销",
+    "panel": "管理面板"
   },
   "view": {
     "signup": {
