新建工单按钮 && fixbug

--- a/core/locale/zh_CN.json
+++ b/core/locale/zh_CN.json
@@ -27,6 +27,10 @@
       "noAccount": "还没有账户？"
     },
     "ticket": {
+      "word": {
+        "create": "创建工单"
+      },
+
       "list": {
         "title": "工单列表"
       }
