/ticket/create, 创建工单的前端页面雏形

--- a/core/locale/zh_CN.json
+++ b/core/locale/zh_CN.json
@@ -16,7 +16,8 @@
     "ticket": "工单",
     "type": "类型",
     "title": "标题",
-    "status": "状态"
+    "status": "状态",
+    "create": "创建"
   },
   "view": {
     "signup": {
