管理员面板前端页面

--- a/core/locale/zh_CN.json
+++ b/core/locale/zh_CN.json
@@ -19,7 +19,8 @@
     "status": "状态",
     "create": "创建",
     "reply": "回复",
-    "create_reply": "创建回复"
+    "create_reply": "创建回复",
+    "adminPanel": "管理员面板"
   },
   "view": {
     "signup": {
