--- a/plugin/rpvhost/locale/zh_CN.json
+++ b/plugin/rpvhost/locale/zh_CN.json
@@ -1,3 +1,9 @@
 {
-  "site_name": "RP 主机"
+  "site_name": "RP 主机",
+  "taobao": "淘宝",
+  "view": {
+    "payment_tips": "拍下对应宝贝后付款即可，购买时注意选择服务器节点选项，备注填写你的用户名。",
+    "go_pay": "淘宝购买",
+    "payment_details": "淘宝支付，订单号 __order_id__"
+  }
 }
