--- a/core/locale/en.json
+++ b/core/locale/en.json
@@ -4,29 +4,63 @@
     "description": "A linux virtual host management system with extensibility"
   },
   "plans": {
-    "all": {
-      "name": "All Services(Default)",
-      "description": "This plan includes all the services."
+    "sample": {
+      "name": "Sample Services",
+      "description": "$1.25 per month, calculated by hour"
+    },
+    "test": {
+      "name": "Test Services",
+      "description": "Calculated by requirements, will be auto closed after 7 days absence"
     }
   },
   "common": {
-    "error": "Error"
+    "error": "Error",
+    "success": "Success",
+    "save": "Save",
+    "apply": "Apply",
+    "change": "Modify",
+    "charge": "Recharge",
+    "enable": "Enable",
+    "disable": "Disable",
+    "time": "Time",
+    "amount": "Amount",
+    "actions": "Action",
+    "details": "Detail",
+    "type": "Type",
+    "generate": "Generate",
+    "id": "ID",
+    "close": "Close",
+    "create": "Create",
+    "submit": "Submit"
+  },
+  "languages": {
+    "zh_CN": "Chinese",
+    "en": "English",
+    "auto": "Auto"
+  },
+  "error_code": {
+    "username_exist": "Username already exists",
+    "email_exist": "Email already exists",
+    "invalid_username": "Invalid username",
+    "invalid_password": "Invalid password",
+    "invalid_email": "Invalid email"
   },
   "account": {
     "": "Account",
-    "signup": "Register",
+    "register": "Register",
     "login": "Login",
     "username": "Username",
-    "email": "E-Mail",
+    "email": "Email",
     "password": "Password",
-    "logout": "Logout"
+    "logout": "Logout",
+    "preferences": "Preferences"
   },
   "panel": {
-    "": "Control Panel"
+    "": "Management",
+    "overview": "Overview"
   },
   "ticket": {
     "": "Support Tickets",
-    "type": "Type",
     "title": "Title",
     "status": "Status",
     "create": "Create",
@@ -34,27 +68,76 @@
     "replies": "All Replies",
     "create_ticket": "Create Ticket",
     "create_reply": "Create Reply",
-    "ticket_list": "Ticket List",
+    "ticket_list": "Tickets List",
     "close_ticket": "Close",
     "finish_ticket": "Finish",
-    "reopen_ticket": "Reopen"
+    "reopen_ticket": "Reopen",
+    "creator": "Creator",
+    "members": "Members"
   },
   "plan": {
-    "": "Plan"
+    "": "Plan",
+    "join": "Subscribe",
+    "leave": "Unsubscribe",
+    "balance": "Balance",
+    "remaining_time": "Time Remaining",
+    "currency": {
+      "CNY": "CNY"
+    }
   },
   "admin": {
     "admin_panel": "Admin Panel"
   },
+  "time": {
+    "day": "Day"
+  },
+  "notification_title": {
+    "ticket": "<%= title %> | Ticket"
+  },
   "view": {
     "layout": {
-      "navigation": "Show Navigation"
+      "navigation": "Extend"
     },
     "account": {
-      "password2": "Repeat Password",
-      "already_signup": "Need an account?",
-      "no_account": "Don't have an account?"
+      "password2": "repeat",
+      "already_register": "Already has account?",
+      "no_account": "Has no account？",
+      "password_inconsistent": "Passwords not matched"
+    },
+    "preferences": {
+      "options": "Options",
+      "qq": "QQ",
+      "coupon_code": "Coupon Code",
+      "code": "Code",
+      "update_password": "Update password",
+      "old_password": "Old password",
+      "new_password": "New password",
+      "repeat_password": "Repeat password",
+      "update_email": "Update Email",
+      "current_email": "Current Email",
+      "new_email": "New Email"
+    },
+    "panel": {
+      "billing": "Billing",
+      "service_switch": "Switch"
+    },
+    "pay": {
+      "pay_log": "Pay History",
+      "pay_method": "Pay Method",
+      "billing_log": "Billing History"
+    },
+    "admin": {
+      "account_list": "Account lists",
+      "coupon_code": "Coupon Code",
+      "confirm_payment": "Confirm",
+      "delete_account": "Delete Account",
+      "expired": "Expired",
+      "empty_expired_tips": "Never expired if empty",
+      "available_times": "Available times",
+      "count": "Amount",
+      "meta": "Meta",
+      "order_id": "Order Id"
     }
   },
-  "plugins": {
-  }
+  "plugins": {}
 }
