--- a/plugin/rpvhost/locale/zh_CN.json
+++ b/plugin/rpvhost/locale/zh_CN.json
@@ -6,5 +6,11 @@
     "payment_tips": "拍下对应宝贝后付款即可，购买时注意选择服务器节点选项，备注填写你的用户名。",
     "go_pay": "淘宝购买",
     "payment_details": "淘宝支付，订单号 __order_id__"
+  },
+  "plans": {
+    "all": {
+      "name": "所有服务(默认)",
+      "description": "磁盘: 520MB, 内存: 27MB, 流量: 37GB"
+    }
   }
 }
