--- a/core/locale/zh_CN.json
+++ b/core/locale/zh_CN.json
@@ -43,7 +43,8 @@
     "email_exist": "邮箱已存在",
     "invalid_username": "用户名不符合要求",
     "invalid_password": "密码不符合要求",
-    "invalid_email": "邮箱不符合要求"
+    "invalid_email": "邮箱不符合要求",
+    "insufficient_balance": "余额不足"
   },
   "account": {
     "": "帐号",
