--- a/plugin/rpvhost/locale/en.json
+++ b/plugin/rpvhost/locale/en.json
@@ -1,3 +1,16 @@
 {
-  "site_name": "RP Virtual Hosting"
+  "site_name": "RP Virtual Hosting",
+  "taobao": "Taobao",
+  "official_blog": "Official Blog",
+  "view": {
+    "payment_tips": "Purchase the following product, and tell us your username and which server.",
+    "go_pay": "Pay on Taobao",
+    "payment_details": "Taobao Payment, Order ID: __order_id__"
+  },
+  "plans": {
+    "all": {
+      "name": "All Service (Default)",
+      "description": "Storage 520MB, Memory: 27MB, Traffic of month: 37GB"
+    }
+  }
 }
