--- a/plugin/ssh/locale/en.json
+++ b/plugin/ssh/locale/en.json
@@ -1,7 +1,7 @@
 {
   "": "SSH",
   "process": "Process",
-  "memory": "Memory",
+  "memory": "Mem",
   "cpu": "CPU",
   "kill": "Kill",
   "view": {
