--- a/plugin/rpvhost/locale/zh_CN.json
+++ b/plugin/rpvhost/locale/zh_CN.json
@@ -11,6 +11,10 @@
     "all": {
       "name": "所有服务(默认)",
       "description": "磁盘: 520MB, 内存: 27MB, 流量: 37GB"
+    },
+    "shadowsocks": {
+      "name": "ShadowSocks",
+      "description": "按量付费，0.6 CNY / G"
     }
   }
 }
