--- a/plugin/shadowsocks/locale/zh_CN.json
+++ b/plugin/shadowsocks/locale/zh_CN.json
@@ -4,8 +4,10 @@
     "remote_port": "端口",
     "reset": "重置",
     "transfer": "流量",
+    "method": "加密算法",
     "transfer_remainder": "余额折合约 __traffic__ G 流量",
     "24hours_ago": "过去 24 小时",
+    "3days_ago": "过去 3 天",
     "7days_ago": "过去 7 天",
     "30days_ago": "过去 30 天"
 }
