--- a/plugin/rpvhost/locale/en.json
+++ b/plugin/rpvhost/locale/en.json
@@ -1,5 +1,6 @@
 {
-  "site_name": "RP Virtual Hosting",
+  "": "RP Virtual Hosting",
+  "greenshadow": "GreenShadow",
   "taobao": "Taobao",
   "official_blog": "Official Blog",
   "view": {
