--- a/plugin/rpvhost/locale/zh_CN.json
+++ b/plugin/rpvhost/locale/zh_CN.json
@@ -1,5 +1,6 @@
 {
-  "site_name": "RP 主机",
+  "": "RP 主机",
+  "greenshadow": "GreenShadow",
   "taobao": "淘宝",
   "official_blog": "官方博客",
   "view": {
