--- a/migration/system/v0.7.1.md
+++ b/migration/system/v0.7.1.md
@@ -1,14 +1,16 @@
-npm install coffee-script -g
+## Core
 
-vi /etc/rc.local
+    npm install coffee-script -g
+    
+    vi /etc/rc.local
 
-    iptables-restore < /etc/iptables.rules
+        iptables-restore < /etc/iptables.rules
 
-vi /etc/supervisor/conf.d/rpadmin.conf
+    vi /etc/supervisor/conf.d/rpadmin.conf
 
-    [program:RootPanel]
-    command=node /home/rpadmin/RootPanel/start.js
-    autorestart=true
-    user=rpadmin
+        [program:RootPanel]
+        command=node /home/rpadmin/RootPanel/start.js
+        autorestart=true
+        user=rpadmin
 
-service supervisor restart
+    service supervisor restart
