--- a/migration/system/v0.8.0.md
+++ b/migration/system/v0.8.0.md
@@ -14,3 +14,10 @@
         user = rpadmin
 
     service supervisor restart
+
+## shadowsocks
+
+    rm /etc/shadowsocks/*.json
+    mv /etc/supervisor/conf.d/rpadmin.conf rpadmin.conf
+    rm /etc/supervisor/conf.d/*.conf
+    mv rpadmin.conf /etc/supervisor/conf.d/rpadmin.conf
