--- a/plugin/rpvhost/locale/en.json
+++ b/plugin/rpvhost/locale/en.json
@@ -3,6 +3,7 @@
   "greenshadow": "GreenShadow",
   "taobao": "Taobao",
   "official_blog": "Official Blog",
+  "terms": "Terms Of Service",
   "view": {
     "payment_tips": "Purchase the following product, and tell us your username and which server.",
     "go_pay": "Pay on Taobao",
