--- a/plugin/rpvhost/locale/zh_CN.json
+++ b/plugin/rpvhost/locale/zh_CN.json
@@ -3,6 +3,7 @@
   "greenshadow": "GreenShadow",
   "taobao": "淘宝",
   "official_blog": "官方博客",
+  "terms": "服务条款",
   "view": {
     "payment_tips": "拍下对应宝贝后付款即可，购买时注意选择服务器节点选项，备注填写你的用户名。",
     "go_pay": "淘宝购买",
